--- a/.github/workflows/news_fetch.yml
+++ b/.github/workflows/news_fetch.yml
@@ -2,8 +2,8 @@ name: News Update
 
 on:
   schedule:
-    - cron: "0 21 * * *"  
-  workflow_dispatch:    
+    - cron: "0 */4 * * *"  # Every 4 hours at minute 0
+  workflow_dispatch:
 
 jobs:
   news-update:
@@ -25,7 +25,7 @@ jobs:
       - name: News Update
         working-directory: server/services/
         env:
-          DB_STRING: ${{ secrets.DB_STRING }}          
-          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}  
+          DB_STRING: ${{ secrets.DB_STRING }}
+          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
           NEWS_API_URL: ${{ secrets.NEWS_API_URL }}
         run: python fetch_news.py
